<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.WeightSelectFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_alignParentEnd="true"
            android:id="@+id/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How much do you weight"
            android:textColor="#D62C2C2C"
            android:layout_below="@+id/logo"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/texttt"
            android:textStyle="bold"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texttt"
            android:layout_above="@+id/bottomLayout"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:id="@+id/bloodGroupLayout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    android:id="@+id/cardUp"
                    android:layout_margin="20dp"
                    android:elevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/up" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/weight" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/upper50"
                            android:textStyle="bold"
                            android:fontFamily="@font/nunito"
                            android:layout_margin="10dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:id="@+id/cardDown"
                    app:cardCornerRadius="5dp"
                    android:elevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/down" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/weight" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/down50"
                            android:textStyle="bold"
                            android:fontFamily="@font/nunito"
                            android:layout_margin="10dp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:id="@+id/bottomLayout"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="Note: You can not donate blood if you are underweight."
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"
                android:layout_margin="20dp"
                android:layout_marginTop="50dp"
                android:id="@+id/forgotPassText"
                android:focusable="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:fontFamily="@font/nunito"
                android:textStyle="bold"
                android:layout_marginHorizontal="110dp"
                android:background="@drawable/button_bg"
                android:layout_marginBottom="5dp"
                android:id="@+id/nextBtnInWightSelection" />


        </LinearLayout>


    </RelativeLayout>
</layout>